--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,12 @@
         </dependency>
         <dependency>
             <groupId>org.apache.lucene</groupId>
-            <artifactId>lucene-demo</artifactId>
+            <artifactId>lucene-queryparser</artifactId>
+            <version>6.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-highlighter</artifactId>
             <version>6.1.0</version>
         </dependency>
 
